infrastructure/kube-prometheus-stack/base/controller/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-alertmanager-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alerts.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`alerts.${DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
      middlewares:
        - name: authentik
          namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`prometheus.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
      middlewares:
        - name: authentik
          namespace: traefik
  tls:
    secretName: prometheus-local-certificate
